# BookingService

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  run.sh
BookingApp/: admin.py  email.py  forms.py  models.py  tasks.py  views.py
BookingApp/api/: permissions.py  serializers.py  urls.py  views.py
BookingApp/api/swagger/: schemas.py
BookingApp/migrations/: 0001_initial.py
BookingProject/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
settings/: .env  nginx.conf
templates/: base.html  flight.html  footer.html  home.html  info.html  menu.html  new_menu.html  ticket.html  user_info.html
templates/airline/: airline_info.html
templates/base/: base.html  flights-list.html  footer.html  home.html  info.html  new_menu.html  welcome.html
templates/flight/: ended_flight.html  ended_flights.html  flight.html  future_flights.html
templates/registration/: email-confirm.html  invalid-email-confirm.html  login.html  register-form.html
templates/review/: make-review.html  review.html  reviews-list.html
templates/ticket/: ticket-email.html  ticket.html
templates/user/: user_info.html
